test/fail/23-multi_match_expr.perk
import "stdio.h"

type List = EmptyList | Cons (int, List)
type Tree = EmptyTree | Node (int, Tree, Tree)

fun main(): void {
    let l: List = EmptyList;

    match (l) {
        `{10} {
            skip
        },
        Cons (var x : int, var l1 : List) {
            printf("Canana");
        }
    }
}